--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <java.version>8</java.version>
         <grpc.version>1.26.0</grpc.version>
         <protobuf.version>3.23.4</protobuf.version>
+        <fastjson.version>2.0.41</fastjson.version>
     </properties>
 
     <dependencies>
@@ -62,6 +63,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.26</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>${fastjson.version}</version>
         </dependency>
     </dependencies>
     <build>
