--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <!--springboot启动类依赖导入-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!--springboot测试依赖-->
         <dependency>
