--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,4 +13,4 @@ log4j.appender.file.File=log/raft-log.txt
 log4j.appender.file.MaxFileSize=10mb
 log4j.appender.file.Threshold=ERROR
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=[%p][%d{yy-MM-dd}][%c]%m%n
+log4j.appender.file.layout.ConversionPattern=[%p][%d{yy-MM-dd HH:mm:ss}][%c]%m%n
